--- a/resources/bundle/bundle_ru.properties
+++ b/resources/bundle/bundle_ru.properties
@@ -1,3 +1,3 @@
-button.changeDir=Zmien katalog
-label.currentDir=Aktualny katalog:\u0020\u0020
-column.filename=Plik
+button.changeDir=\u041F\u0435\u0440\u0435\u0439\u0434\u0438\u0442\u0435 \u0432 \u043A\u0430\u0442\u0430\u043B\u043E\u0433
+label.currentDir=\u0422\u0435\u043A\u0443\u0449\u0438\u0439 \u043A\u0430\u0442\u0430\u043B\u043E\u0433:\u0020\u0020
+column.filename=\u0444\u0430\u0439\u043B
